Add id form components to dynamic forms.

--- a/src/test/resources/org/oddjob/arooa/design/layout/ThingConfig.xml
+++ b/src/test/resources/org/oddjob/arooa/design/layout/ThingConfig.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<thing a="Ark" b="Ball" d="Dog" e="Egg" name="Lots of Design">
+<thing id="things" a="Ark" b="Ball" d="Dog" e="Egg" name="Lots of Design">
     <single>
         <value value="One Thing"/>
     </single>
